manifests/helloweb-deployment.yaml
# [START container_helloapp_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: lab-3
        image: gcr.io/google-samples/lab-3:1.0
        ports:
        - containerPort: 8080
# [END container_helloapp_deployment]
